Update background color and alignment, fix DeleteConfirmationmodal scroll, and update menu prices format

--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,7 @@
     min-height: 100vh;
     font-family: Raleway, sans-serif;
     box-sizing: border-box;
-    background-image: url(../public/pexels-pixabay-235985.webp);
-    /* background-color: rgba(182, 134, 61, 0.528); */
+    background-color: #976f50;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
